Added changes for: 1.Removed unnecessary info loggers